# progno

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  justfile
agents/: claude-orchestrator.md  gemma-coder-system-prompt.md  task-prompt-template.md
app/: .eslintrc.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
app/src/: App.svelte  app.css
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/artifacts/: elo_state.json  match_history.parquet
app/src-tauri/artifacts/atp/: model_card.json  players.parquet
app/src-tauri/artifacts/wta/: model_card.json  players.parquet
app/src-tauri/src/: artifacts.rs  bets.rs  commands.rs  config.rs  elo.rs  kelly.rs  lib.rs  llm.rs  main.rs  parser.rs  rapidapi.rs  schedule.rs  sidecar.rs  state.rs
app/src-tauri/tests/: integration_test.rs  kelly.rs  test_artifacts.rs  test_commands.rs  test_elo.rs  test_parser.rs
app/src/lib/: csv.ts  stores.ts
app/src/lib/components/: Footer.svelte  HistoryPanel.svelte  MatchCard.svelte  MatchInput.svelte  MatchList.svelte  SchedulePanel.svelte  StatsPanel.svelte
docs/superpowers/plans/: 2026-04-22-phase-1a-training-pipeline.md  2026-04-23-phase-1b-tauri-app.md  2026-04-23-phase-2-kelly-ev.md  2026-04-23-phase-3-catboost-sidecar.md  2026-04-24-phase3-phase4-wta.md  2026-04-25-phase3-5-odds-ingest.md  2026-04-25-welo-feature-engineering.md  2026-04-28-autocomplete-match-input.md  2026-04-28-clv-dashboard.md
docs/superpowers/specs/: 2026-04-22-tennis-prediction-app-design.md  2026-04-24-phase4-wta-design.md  2026-04-25-welo-feature-eng-design.md  2026-04-28-autocomplete-match-input-design.md  2026-04-28-clv-dashboard-design.md
sidecar/: build.sh  features.py  progno-sidecar.spec  pyproject.toml  server.py  server.py.bak
training/: pyproject.toml  ruff.toml
training/artifacts/: elo_state.json  players.parquet
training/artifacts/atp/: calibration.json  elo_state.json  model.cbm  model_card.json
training/artifacts/wta/: calibration.json  model.cbm  model_card.json
training/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
training/catboost_info/learn/: events.out.tfevents
training/catboost_info/test/: events.out.tfevents
training/data/manual/: name_map.csv
training/scripts/: fetch_sackmann.sh  fetch_sackmann_wta.sh  fetch_tennis_data.sh
training/src/progno_train/: artifacts.py  cli.py  config.py  elo.py  features.py  ingest.py  ingest_xlsx.py  odds_join.py  report.py  rollup.py  score.py  train.py  validate.py
training/tests/: test_artifacts.py  test_cli.py  test_e2e_smoke.py  test_elo.py  test_features.py  test_ingest.py  test_ingest_xlsx.py  test_odds_join.py  test_rollup.py  test_score.py  test_smoke.py  test_train.py  test_validate.py
training/tests/fixtures/: mini_atp_matches.csv
