[project]
name = "progno-train"
version = "0.1.0"
description = "Training pipeline for Progno tennis prediction"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "pyarrow>=15.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
progno-train = "progno_train.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/progno_train"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
