[package]
name = "progno"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.1", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-store = "2.0"
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.32"
rusqlite = { version = "0.32", features = ["bundled"] }

[features]
default = []

[dev-dependencies]
tempfile = "3.27.0"
